--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecondHandMarket</title>
     <link rel="stylesheet" href="/css/style.css">
-    
+    <link rel="icon" href="/img/bag.png" type="image/png">  
 </head>
 <body>
     <div class="navbar-brand">
