--- a/order.html
+++ b/order.html
@@ -6,6 +6,7 @@
     <title>Order payment</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/styleorder.css" />
+    <link rel="icon" href="/img/bag.png" type="image/png">  
   </head>
   <body>
     <div class="navbar-brand">
