--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
     <link rel="stylesheet" href="/css/register.css">
+    <link rel="icon" href="/img/bag.png" type="image/png">  
 </head>
 <body>
     <button class="butt-back" onclick="window.location.href='logins.html'"> ⭠ </button>
