--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,7 @@
     <title>Product Detail</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/style-detail.css" />
+    <link rel="icon" href="/img/bag.png" type="image/png">  
   </head>
   <body>
     <div class="navbar-brand">
