--- a/logins.html
+++ b/logins.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login For Html Css</title>
     <link rel="stylesheet" href="/css/logins.css">
+    <link rel="icon" href="/img/bag.png" type="image/png">  
 </head>
 <body>
     <button class="butt-back" onclick="window.location.href='index.html'"> ⭠ </button>
